--- a/EasyToGoBq/EasyToGoBq.csproj
+++ b/EasyToGoBq/EasyToGoBq.csproj
@@ -94,6 +94,18 @@
     <Compile Include="Forms\FormPopUpOperation.Designer.cs">
       <DependentUpon>FormPopUpOperation.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FormPopUpTransact.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormPopUpTransact.Designer.cs">
+      <DependentUpon>FormPopUpTransact.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormPopUpTransco.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormPopUpTransco.Designer.cs">
+      <DependentUpon>FormPopUpTransco.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FormProgress.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -167,6 +179,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormPopUpOperation.resx">
       <DependentUpon>FormPopUpOperation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormPopUpTransact.resx">
+      <DependentUpon>FormPopUpTransact.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormPopUpTransco.resx">
+      <DependentUpon>FormPopUpTransco.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormProgress.resx">
       <DependentUpon>FormProgress.cs</DependentUpon>
